Andamento na análise

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,10 +13,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-22 09:08:15.489 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-22 09:08:15.490 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-22 09:08:15.491 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-22 09:08:15.492 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
+      "2024-04-26 13:08:01.028 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
+      "2024-04-26 13:08:01.030 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
+      "2024-04-26 13:08:01.031 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
+      "2024-04-26 13:08:01.032 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -63,7 +63,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>competência</th>\n",
+       "      <th>data</th>\n",
        "      <th>esfera</th>\n",
        "      <th>uf</th>\n",
        "      <th>ajustes</th>\n",
@@ -222,13 +222,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      competência    esfera  uf  ajustes  ec123  coun  vaaf  vaar  vaat  \\\n",
-       "index                                                                     \n",
-       "0      2007-01-01  ESTADUAL  AC    False   0.00  0.00  0.00  0.00  0.00   \n",
-       "2      2007-01-01  ESTADUAL  AL    False   0.00  0.00  0.00  0.00  0.00   \n",
-       "4      2007-01-01  ESTADUAL  AM    False   0.00  0.00  0.00  0.00  0.00   \n",
-       "6      2007-01-01  ESTADUAL  AP    False   0.00  0.00  0.00  0.00  0.00   \n",
-       "8      2007-01-01  ESTADUAL  BA    False   0.00  0.00  0.00  0.00  0.00   \n",
+       "            data    esfera  uf  ajustes  ec123  coun  vaaf  vaar  vaat  \\\n",
+       "index                                                                    \n",
+       "0     2007-01-01  ESTADUAL  AC    False   0.00  0.00  0.00  0.00  0.00   \n",
+       "2     2007-01-01  ESTADUAL  AL    False   0.00  0.00  0.00  0.00  0.00   \n",
+       "4     2007-01-01  ESTADUAL  AM    False   0.00  0.00  0.00  0.00  0.00   \n",
+       "6     2007-01-01  ESTADUAL  AP    False   0.00  0.00  0.00  0.00  0.00   \n",
+       "8     2007-01-01  ESTADUAL  BA    False   0.00  0.00  0.00  0.00  0.00   \n",
        "\n",
        "                fpe          fpm          icms        ipi  ipva  itcmd  itr  \\\n",
        "index                                                                         \n",
@@ -247,14 +247,14 @@
        "8        0.00    0.00 36,042,237.72  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = pd.read_parquet('./DATASETS/finally_data.parquet')\n",
-    "x.head()"
+    "df = pd.read_parquet('./DATASETS/finally_data.parquet')\n",
+    "df.head()"
    ]
   },
   {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>competência</th>\n",
+       "      <th>data</th>\n",
        "      <th>esfera</th>\n",
        "      <th>uf</th>\n",
        "      <th>ajustes</th>\n",
@@ -335,6 +335,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>20736</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>60,482,334.23</td>\n",
+       "      <td>10,572,755.89</td>\n",
+       "      <td>20,824,739.20</td>\n",
+       "      <td>9,323.17</td>\n",
+       "      <td>1,391,416.54</td>\n",
+       "      <td>133,506.03</td>\n",
+       "      <td>3,503.19</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>93,417,578.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20738</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>24,111,242.93</td>\n",
+       "      <td>1,102,103.59</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>32,240,575.43</td>\n",
+       "      <td>17,937,195.40</td>\n",
+       "      <td>31,924,334.81</td>\n",
+       "      <td>14,123.81</td>\n",
+       "      <td>2,997,562.43</td>\n",
+       "      <td>198,837.05</td>\n",
+       "      <td>16,762.07</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>110,542,737.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20740</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>136,603,516.41</td>\n",
+       "      <td>1,386,780.74</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>36,811,992.74</td>\n",
+       "      <td>20,568,962.00</td>\n",
+       "      <td>96,128,835.68</td>\n",
+       "      <td>190,452.54</td>\n",
+       "      <td>3,750,330.96</td>\n",
+       "      <td>459,031.95</td>\n",
+       "      <td>6,814.18</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>295,906,717.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>20742</th>\n",
        "      <td>2023-01-01</td>\n",
        "      <td>ESTADUAL</td>\n",
@@ -357,151 +423,123 @@
        "      <td>84,089,696.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20850</th>\n",
-       "      <td>2023-02-01</td>\n",
+       "      <th>20744</th>\n",
+       "      <td>2023-01-01</td>\n",
        "      <td>ESTADUAL</td>\n",
-       "      <td>AP</td>\n",
+       "      <td>BA</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>270,039,562.95</td>\n",
+       "      <td>2,223,167.88</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>379,727.91</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>82,915,496.28</td>\n",
-       "      <td>9,512,904.73</td>\n",
-       "      <td>12,734,268.20</td>\n",
-       "      <td>44,367.68</td>\n",
-       "      <td>1,085,153.03</td>\n",
-       "      <td>25,654.12</td>\n",
-       "      <td>463.08</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>106,698,035.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20958</th>\n",
-       "      <td>2023-03-01</td>\n",
-       "      <td>ESTADUAL</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>False</td>\n",
+       "      <td>73,659,292.52</td>\n",
+       "      <td>76,481,834.71</td>\n",
+       "      <td>102,205,788.36</td>\n",
+       "      <td>1,164,138.72</td>\n",
+       "      <td>10,092,170.74</td>\n",
+       "      <td>838,027.80</td>\n",
+       "      <td>113,848.96</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>414,248.63</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>49,774,569.70</td>\n",
-       "      <td>5,819,480.04</td>\n",
-       "      <td>11,681,232.06</td>\n",
-       "      <td>54,985.44</td>\n",
-       "      <td>4,250,510.47</td>\n",
-       "      <td>43,949.98</td>\n",
-       "      <td>620.71</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>72,039,597.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21066</th>\n",
-       "      <td>2023-04-01</td>\n",
-       "      <td>ESTADUAL</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>448,769.35</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>57,333,608.21</td>\n",
-       "      <td>6,653,481.89</td>\n",
-       "      <td>11,988,795.56</td>\n",
-       "      <td>58,618.45</td>\n",
-       "      <td>1,329,847.56</td>\n",
-       "      <td>11,038.19</td>\n",
-       "      <td>690.17</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>77,824,849.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21174</th>\n",
-       "      <td>2023-05-01</td>\n",
-       "      <td>ESTADUAL</td>\n",
-       "      <td>AP</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>485,555.52</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>62,984,352.88</td>\n",
-       "      <td>7,396,413.40</td>\n",
-       "      <td>12,001,464.55</td>\n",
-       "      <td>52,713.14</td>\n",
-       "      <td>1,041,511.84</td>\n",
-       "      <td>36,958.47</td>\n",
-       "      <td>296.74</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>83,999,266.54</td>\n",
+       "      <td>536,817,832.64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      competência    esfera  uf  ajustes  ec123  coun  vaaf       vaar  vaat  \\\n",
-       "index                                                                          \n",
-       "20742  2023-01-01  ESTADUAL  AP    False   0.00  0.00  0.00 345,207.19  0.00   \n",
-       "20850  2023-02-01  ESTADUAL  AP    False   0.00  0.00  0.00 379,727.91  0.00   \n",
-       "20958  2023-03-01  ESTADUAL  AP    False   0.00  0.00  0.00 414,248.63  0.00   \n",
-       "21066  2023-04-01  ESTADUAL  AP    False   0.00  0.00  0.00 448,769.35  0.00   \n",
-       "21174  2023-05-01  ESTADUAL  AP    False   0.00  0.00  0.00 485,555.52  0.00   \n",
+       "            data    esfera  uf  ajustes  ec123  coun           vaaf  \\\n",
+       "index                                                                 \n",
+       "20736 2023-01-01  ESTADUAL  AC    False   0.00  0.00           0.00   \n",
+       "20738 2023-01-01  ESTADUAL  AL    False   0.00  0.00  24,111,242.93   \n",
+       "20740 2023-01-01  ESTADUAL  AM    False   0.00  0.00 136,603,516.41   \n",
+       "20742 2023-01-01  ESTADUAL  AP    False   0.00  0.00           0.00   \n",
+       "20744 2023-01-01  ESTADUAL  BA    False   0.00  0.00 270,039,562.95   \n",
        "\n",
-       "                fpe          fpm          icms       ipi         ipva  \\\n",
-       "index                                                                   \n",
-       "20742 59,580,994.71 7,213,674.32 15,679,804.13 62,216.31 1,184,772.19   \n",
-       "20850 82,915,496.28 9,512,904.73 12,734,268.20 44,367.68 1,085,153.03   \n",
-       "20958 49,774,569.70 5,819,480.04 11,681,232.06 54,985.44 4,250,510.47   \n",
-       "21066 57,333,608.21 6,653,481.89 11,988,795.56 58,618.45 1,329,847.56   \n",
-       "21174 62,984,352.88 7,396,413.40 12,001,464.55 52,713.14 1,041,511.84   \n",
+       "              vaar  vaat           fpe           fpm           icms  \\\n",
+       "index                                                                 \n",
+       "20736         0.00  0.00 60,482,334.23 10,572,755.89  20,824,739.20   \n",
+       "20738 1,102,103.59  0.00 32,240,575.43 17,937,195.40  31,924,334.81   \n",
+       "20740 1,386,780.74  0.00 36,811,992.74 20,568,962.00  96,128,835.68   \n",
+       "20742   345,207.19  0.00 59,580,994.71  7,213,674.32  15,679,804.13   \n",
+       "20744 2,223,167.88  0.00 73,659,292.52 76,481,834.71 102,205,788.36   \n",
        "\n",
-       "          itcmd      itr  lc8796  ajuste          total  \n",
-       "index                                                    \n",
-       "20742 21,736.69 1,291.14    0.00    0.00  84,089,696.68  \n",
-       "20850 25,654.12   463.08    0.00    0.00 106,698,035.03  \n",
-       "20958 43,949.98   620.71    0.00    0.00  72,039,597.03  \n",
-       "21066 11,038.19   690.17    0.00    0.00  77,824,849.38  \n",
-       "21174 36,958.47   296.74    0.00    0.00  83,999,266.54  "
+       "               ipi          ipva      itcmd        itr  lc8796  ajuste  \\\n",
+       "index                                                                    \n",
+       "20736     9,323.17  1,391,416.54 133,506.03   3,503.19    0.00    0.00   \n",
+       "20738    14,123.81  2,997,562.43 198,837.05  16,762.07    0.00    0.00   \n",
+       "20740   190,452.54  3,750,330.96 459,031.95   6,814.18    0.00    0.00   \n",
+       "20742    62,216.31  1,184,772.19  21,736.69   1,291.14    0.00    0.00   \n",
+       "20744 1,164,138.72 10,092,170.74 838,027.80 113,848.96    0.00    0.00   \n",
+       "\n",
+       "               total  \n",
+       "index                 \n",
+       "20736  93,417,578.25  \n",
+       "20738 110,542,737.52  \n",
+       "20740 295,906,717.20  \n",
+       "20742  84,089,696.68  \n",
+       "20744 536,817,832.64  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = x.loc[(x['competência']>='2023-01-01') & (x['competência']<'2024-01-01') & (x.esfera=='ESTADUAL') & (x.ajustes==False) & (x.uf=='AP')]\n",
+    "x = df.loc[(df['data']>='2023-01-01') & (df['data']<'2024-01-01')]\n",
     "x.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "968996614.8999999"
+       "271000624049.03"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x.total.sum() # 968996614.90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adria\\AppData\\Local\\Temp\\ipykernel_8180\\1358822985.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  data = df.groupby(['data', 'esfera']).sum()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "36951252368.94"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = df.groupby(['data', 'esfera']).sum()\n",
+    "data = data.loc[(data.index.get_level_values(0)>='2024-01-01') & (data.index.get_level_values(0)<'2024-04-01')]\n",
+    "data.total.sum()"
    ]
   }
  ],
